--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "10.4.17",
+    "framer-motion": "^11.0.3",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
