--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "daisyui": "^4.6.1",
     "encoding": "^0.1.13"
   }
 }
