--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tailwindcss/typography": "^0.5.10",
+    "@vercel/analytics": "^1.1.2",
     "autoprefixer": "10.4.17",
     "framer-motion": "^11.0.3",
     "geist": "^1.2.1",
