--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-three/drei": "^9.97.0",
+    "@react-three/fiber": "^8.15.16",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -25,6 +27,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "tailwindcss": "3.4.1",
+    "three": "^0.161.0",
     "typescript": "5.3.3"
   },
   "devDependencies": {
